
BUG FIXES AND MINOR IMPROVEMENTS

    o Update `checkRbuildignore` to flag `test` and `longtests` entries
    appropriately (@hpages, #197)
    o Fix issue where BiocCheck would fail when errors caused by duplicate chunk
    labels were present (@hpages, #199)
    o Avoid format checks e.g., length, indentation, and tabs for Rd files
    that use roxygen2
    o Use httr2 over httr for http requests
    o Clarify `NOTE` and `WARNING` messages for `CITATION` file inclusion
    (#209).

CHANGES IN VERSION 1.38.0
-----------------------

BUG FIXES AND MINOR IMPROVEMENTS

    o Exclude data docs with `\\format` tags in addition to 'package' docs when
    checking for `\\value` / `@return` in documentation.
    o Resolve unknown macro warnings when using Rdpack (@LiNK-NY, #196)
    o Improve the `read.dcf` operation that looks for any deprecated packages
    in both Bioconductor release and devel versions.
    o Remove overwrite prompt when updating cached resources in deprecated
    packages check.

CHANGES IN VERSION 1.36.0
-----------------------

NEW FEATURES

    o Include size limit checks for data files in `data`, `inst/extdata`, and
    `data-raw` folders (@lshep, @const-ae, #167, #67)
    o Source package directories that include an `inst/doc` folder with files
    are now flagged with an error. `doc` folders are generated during
    `R CMD build`.
    o The error for packages already hosted on CRAN has been converted to a
    warning (@lshep, #177). Any such incoming packages must be removed from CRAN
    before the following Bioconductor release.

BUG FIXES AND MINOR IMPROVEMENTS

    o Filter out 'package' docTypes from '\value' documentaiton checks
    (@grimbough, #189)
    o Obtain a more complete list of deprecated packages for
    `checkDeprecatedPkgs`
    o Fix issue with path seperators on Windows ('\\' vs '/') causing the unit
    test for `getBiocCheckDir` to report erroneous mismatches (@grimbough, #175)